modify layout